# cc

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cfgs/: CMakeLists.txt  base.json  base.json.in  base.trace
doc/: ARCH.md  PROTOCOL.md  STIMULUS.md  TODO.org
driver/: CMakeLists.txt  builder.cc  builder.h  driver.h  main.cc
include/: cc.h
include/cc/: builder.h  cache.h  cfgs.h  common.h  cpu.h  cpucluster.h  dir.h  kernel.h  l1cache.h  l2cache.h  llc.h  msg.h  noc.h  primitives.h  protocol.h  sim.h  soc.h  stimulus.h  types.h
libcc/: CMakeLists.txt  agent.h  amba.cc  amba.gen  amba.h  builder.cc  cache.cc  cache.h  ccntrl.cc  ccntrl.enum  ccntrl.h  cfgs.cc  cpu.cc  cpu.enum  cpu.gen  cpu.h  cpu_msg.h  cpucluster.cc  cpucluster.h  dir.cc  dir.gen  dir.h  kernel.cc  l1cache.cc  l1cache.enum  l1cache.gen  l1cache.h  l2cache.cc  l2cache.enum  l2cache.gen  l2cache.h  llc.cc  llc.enum  llc.gen  llc.h  llc.msg  mem.cc  mem.gen  mem.h  moesi.cc  (+25 more)
libcc/moesi/: CMakeLists.txt  moesi.cc  moesi_cc.cc  moesi_cc.h  moesi_dir.cc  moesi_dir.h  moesi_l1.cc  moesi_l1.h  moesi_l2.cc  moesi_l2.h
scripts/: CMakeLists.txt  generate_deps.py  generate_enum.py  generate_msg.py
src/: CMakeLists.txt  agent.h  amba.cc  amba.h  cache.cc  cache.h  ccntrl.cc  ccntrl.h  cfgs.cc  cpu.cc  cpu.h  cpucluster.cc  cpucluster.h  dir.cc  dir.h  kernel.cc  kernel.h  l1cache.cc  l1cache.h  l2cache.cc  l2cache.h  llc.cc  llc.h  log.h  main.cpp  mem.cc  mem.h  moesi.cc  moesi.h  moesi_cc.cc  moesi_cc.h  moesi_dir.cc  moesi_dir.h  moesi_l1.cc  moesi_l1.h  moesi_l2.cc  moesi_l2.h  msg.cc  msg.h  noc.cc  (+15 more)
tests/: CMakeLists.txt  basic_1dir_1cc_1cpu.cc  basic_1dir_1cc_2cpu.cc  basic_1dir_2cc_1cpu.cc  cache.cc  common.cc  evict_1dir_1cc_1cpu.cc  kernel.cc  primitives.cc  res_1dir_1cc_1cpu.cc  sim.cc  utility.cc
tests/directed/: CMakeLists.txt  coincident.cc
tests/directed/cfg111/: CMakeLists.txt  basic.cc
tests/directed/cfg112/: CMakeLists.txt  basic.cc
tests/directed/cfg121/: CMakeLists.txt  basic.cc  coincident.cc
tests/directed/cfg141/: CMakeLists.txt  basic.cc  recall.cc
tests/general/: CMakeLists.txt  cache.cc  kernel.cc  primitives.cc  utility.cc
tests/include/test/: builder.h  checker.h  top.h  utility.h
tests/old/: basic_1dir_1cc_1cpu.cc  basic_1dir_1cc_2cpu.cc  evict_1dir_1cc_1cpu.cc  pro_1dir_1cc_1cpu.cc  test_utilities.cc
tests/sim/: CMakeLists.txt  basic_1dir_1cc_1cpu.cc  basic_1dir_1cc_2cpu.cc  basic_1dir_2cc_1cpu.cc  evict_1dir_1cc_1cpu.cc  test_utilities.cc  test_utilities.h
tests/stimulus/: CMakeLists.txt  programmatic.cc  trace.cc
tests/test/: CMakeLists.txt  builder.cc  checker.cc  top.cc
